--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -10,7 +10,7 @@ on:
   #  branches: 
   #    - master
   schedule:
-    - cron: "12 * * * *"
+    - cron: "10/24 * * * *"
   watch:
     types: [started]
    
